@@ -157,7 +157,7 @@ class TraktTv extends TV
 
 					if (is_numeric($videoId) && $videoId > 0 && is_numeric($traktid) && $traktid > 0) {
 						// Now that we have valid video and trakt ids, try to get the poster
-						$this->getPoster($videoId, $traktid);
+						//$this->getPoster($videoId, $traktid);
 
 						$seasonNo = preg_replace('/^S0*/i', '', $release['season']);
 						$episodeNo = preg_replace('/^E0*/i', '', $release['episode']);
@@ -324,7 +324,7 @@ class TraktTv extends TV
 				}
 			}
 			if (isset($highest)) {
-				$fullShow = $this->client->showSummary($highest['show']['ids']['trakt'], 'full,images');
+				$fullShow = $this->client->showSummary($highest['show']['ids']['trakt'], 'full');
 				if ($this->checkRequiredAttr($fullShow, 'traktS')) {
 					$return = $this->formatShowInfo($fullShow);
 				}
