@@ -9,6 +9,7 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 2016-10-13 DariusIII
+	Chg: Remove images/covers support from Trakt (they will no longer serve images after october 31)
 	Fix: getBrowseRange query was missing group_name used in API extended parameter
 2016-10-12 DariusIII
 	Fix: Advanced search link in Gamma theme
